<resources>
    <string name="app_name">CuActive</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="points">Pts : 9999</string>
    <string name="cuactive">CuActive</string>
    <string name="topButtonText">Exercise</string>
    <string name="midButtonText">Chores</string>
    <string name="botButtonText">Cooking</string>
    <string name="welcomeText">Welcome</string>
    <string name="title_activity_screen">ActivityScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="controlButton">start</string>
    <string name="back">Back</string>
    <string name="chosen_activity">Chosen Activity</string>
    <string name="use_5_points">Use 5 Points</string>
    <string name="use_10_points">Use 10 Points</string>
    <string name="use_20_points">Use 20 Points</string>
    <string name="use_40_points">Use 40 Points</string>
    <string name="use_50_points">Use 50 Points</string>
    <string name="use_100_points">Use 100 Points</string>
    <string name="shop">Shop</string>
    <string name="title_activity_point_shop">PointShop</string>
    <string name="minutes_spent_9999">Minutes Spent: 9999</string>
</resources>