<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/backButton2"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="664dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="144dp"
        android:text="@string/cuactive"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buy5Points"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="72dp"
        android:text="@string/use_5_points"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText2" />

    <Button
        android:id="@+id/buy10Points"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="28dp"
        android:text="@string/use_10_points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText2" />

    <Button
        android:id="@+id/buy20Points"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/use_20_points"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buy5Points" />

    <Button
        android:id="@+id/buy40Points"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:text="@string/use_40_points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buy10Points" />

    <Button
        android:id="@+id/buy50Points"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="16dp"
        android:text="@string/use_50_points"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buy20Points"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buy100Points"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:text="@string/use_100_points"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buy40Points"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/points2"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="166dp"
        android:text="@string/points"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText2" />
</androidx.constraintlayout.widget.ConstraintLayout>