<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.PlaceholderFragment">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="2dp"
        android:layout_height="12dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="144dp"
        android:text="@string/cuactive"
        android:textSize="36sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/topButton"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="55dp"
        android:text="@string/topButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopButton" />

    <Button
        android:id="@+id/midButton"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginStart="55dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="36dp"
        android:text="@string/midButtonText"
        app:layout_constraintBottom_toTopOf="@+id/botButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topButton" />

    <Button
        android:id="@+id/botButton"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="72dp"
        android:text="@string/botButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="105dp"
        android:layout_height="32dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="156dp"
        android:text="@string/welcomeText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <TextView
        android:id="@+id/points"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="165dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="166dp"
        android:text="@string/points"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <Button
        android:id="@+id/shopButton"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="161dp"
        android:text="@string/shop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/points" />

    <TextView
        android:id="@+id/minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="141dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="141dp"
        android:text="@string/minutes_spent_9999"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="185dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="186dp"
        android:layout_marginBottom="4dp"
        android:src="@mipmap/sad"
        app:layout_constraintBottom_toTopOf="@+id/points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minutes" />

</androidx.constraintlayout.widget.ConstraintLayout>